examples/datalog/33_meta/13_kg_info.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_kg_info
Knowledge graph 'test_kg_info' created.
Switched to knowledge graph: test_kg_info
> .kg use test_kg_info
Switched to knowledge graph: test_kg_info
> +facts[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'facts'.
> .kg info test_kg_info
Script error: Parse error: Unknown kg subcommand: info
